fix for closinf x covering up text

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1514,7 +1514,7 @@ button.close {
     padding-bottom: 15px;
 
      @include media-breakpoint-down(phone) {
-     	padding: 0.75rem 1.875rem;
+     	padding: .75rem 3rem .75rem 1.875rem;
      }
 }
 .alert-text {
